# aiml-project

./: .bandit  .dockerignore  .env.authnz.template  .env.backup  .env.example  .env.test  .gitignore  .gitignorey  .pre-commit-config.yaml  :memory:  AGENTS.md  API_CHANGES.md  API_ISSUES_DISCOVERED.md  AUTHNZ_DATABASE_CONFIG.md  AUTHNZ_PERMISSION_MATRIX.md  Add-Context-1.md  Auth-Add-Tracker.md  AuthNZ-Assessment-Final.md  AuthNZ-Fixup-Plan-1.md  AuthNZ-Improvements-22.md  AuthNZ-Issues-List.md  Browser-Plugin-2.md  CHANGELOG.md  CHATBOOK_FIXES_IMPLEMENTED.md  CHATBOOK_SECURITY_FIXES.md  CHATBOOK_TEST_FIXES.md  CHAT_MODULE_REMEDIATION_PLAN.md  CHUNKING_MIGRATION_COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTATION.md  Chat-Addons-1.md  Chatbook-Migrations-1.md  Chunk-Refactor-33.md  Chunk-Templates-1.md  Chunking-1.md  Claims_Plan_2.md  Curl-Scraping-PRD.md  DB-Consolidation.md  E2E-Additional-Tests-Recommendations.md  (+212 more)
.codex/environments/: environment.toml
.devcontainer/: Dockerfile
.github/: dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
Config_Files/: resource_governor_policies.yaml  session_encryption.key
Dockerfiles/: Dockerfile.admin-ui  Dockerfile.audio_gpu_worker  Dockerfile.prod  Dockerfile.webui  Dockerfile.worker  README.md  docker-compose.admin-ui.yml  docker-compose.dev.yml  docker-compose.embeddings.yml  docker-compose.host-storage.yml  docker-compose.hosted-saas-prod.local-postgres.yml  docker-compose.hosted-saas-prod.yml  docker-compose.hosted-saas-staging.yml  docker-compose.override.yml  docker-compose.pg.yml  docker-compose.postgres-ci.yml  docker-compose.postgres.yml  docker-compose.proxy-nginx.yml  docker-compose.proxy.yml  docker-compose.test.yml  docker-compose.webui.yml  docker-compose.workers.yml  docker-compose.yml
Docs/: About.md  Architecture.md  Audio_STT_Module.md  Audio_Streaming_Metrics.md  Audio_Streaming_Protocol.md  Bitnet_and_Mamba_Papers.md  CHARACTER_CHAT_API_DOCUMENTATION.md  Char-Chat-adds-1.md  Chunking_Templates.md  Current-RAG-Report-22.md  Database_Migrations.md  Documentation.md  EVALUATION_TEST_REPORT.md  Evaluations_Quick_Start.md  Getting-Started-STT_and_TTS.md  Handy_Dandy_Papers.md  Local_LLM.md  Moderation-Guardrails.md  NEMO_STREAMING_DOCUMENTATION.md  PG-Support-Plan.md  Postgres_Support_Status_and_Testing.md  Prompt-Studio-Imrpove-1.md  RAG_COMPLETE_IMPLEMENTATION_REPORT.md  RAG_Notes.md  RELEASE_NOTES.md  Release_Checklist.md  STT_TESTING_DOCUMENTATION.md  Scraper_Analyzers.md  TTS-SETUP-GUIDE.md  The_Primer.md  UX_AUDIT_FLASHCARDS_2026_02_18.md  UX_AUDIT_PROMPT.md  UX_AUDIT_QUIZ_PAGE.md  UX_AUDIT_REPORT.md  UX_AUDIT_REPORT_notes_page_2026_02_17.md  UX_AUDIT_REPORT_v2.md  UX_KANBAN_PAGE_REVIEW.md  UX_REVIEW_CHARACTERS_PAGE.md  UX_REVIEW_PROMPT_CHARACTERS_PAGE.md  UX_Review_Chat_Playground.md  (+4 more)
Helper_Scripts/: Benchmark_Prompts.md  acp_stub_agent.py  backfill_chacha_tool_calls.py  backfill_chunk_metadata.py  backup_all.sh  check_site_anchors.py  chroma_to_pgvector_migrate.py  demo_chat_sse_and_metrics.py  docker_prepare_env.sh  download_embedding_models.py  download_kokoro_assets.py  embeddings_soak_test.py  generate_audio_bundle_docs.py  generate_docs_with_config.py  generate_env_vars_md.py  hyde_backfill.py  install_chatterbox_deps.py  install_silero_vad_weights.py  launch_postgres.sh  model_container_cycle.py  pg_backup_restore.py  pgvector_migrate_hnsw.py  pgvector_quickcheck.py  print_chat_routes.py  print_eval_routes.py  print_llm_routes.py  quickstart.sh  refresh_docs_published.sh  restore_all.sh  rg_stage9a_parity_window.py  run-authnz-tests.sh  run-frontend-integration.sh  setup_acp.sh  smoke_authnz_sqlite.py  smoke_embeddings_orchestrator_shutdown.py  streaming_unified_smoke.py  test_neutts_roundtrip.py  tldw_jobs.py  tooling_smoke.py  update_privilege_registry_snapshot.py  (+5 more)
SUBS/: 01_OVERVIEW.md
admin-ui/: .env.example  README.md  REVIEW.md  Release_Checklist.md  instrumentation.ts  middleware.ts  next.config.js  package.json  playwright.config.ts  sentry.client.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/: DEVELOPMENT.md  IMPLEMENTATION_PLAN_websearch_tool_augmentation.md  QA_PAGE_REVIEW_CHECKLIST.md  Shared_UI_Monorepo.md  Testing_Guide.md  package.json
chatterbox/: __init__.py  mtl_tts.py  tts.py  vc.py
logs/: embeddings_audit.jsonl
migrations/: v0.1.2_chatbook_features.sql
mock_openai_server/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  config.json  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  setup.py
mock_openai_server/examples/: basic_usage.py
mock_openai_server/mock_openai/: __init__.py  config.py  models.py  responses.py  server.py  streaming.py
mock_openai_server/tests/: test_server.py
monitoring/: README.md
nemo/: __init__.py
quick_tests/: test_tools_routes.py
sanity_tests/: test_diarization_sanity.py
sbom/: .gitignore  Makefile  README.md
schema/: postgresql_users.sql  sqlite_users.sql
sdks/python/: README.md  pyproject.toml
sdks/python/tldw_voice_assistant/: __init__.py  client.py  types.py
sdks/python/tldw_voice_assistant/audio/: __init__.py  capture.py  player.py
sdks/python/tldw_voice_assistant/examples/: basic_usage.py  wake_word.py
test-workflow/: test-workflow.sh
tests/: test_verify_upstream.py
tldw-frontend/: .eslintrc.cjs  .prettierignore  EXTENSION_FRONTEND_MIGRATION_MAP.md  FRONTEND_AUDIT.md  IMPLEMENTATION_PLAN_extension_frontend_migration.md  IMPLEMENTATION_PLAN_webui_extension_sync_flashcards_evals_collections_review.md  README.md  Release_Checklist.md  eslint.config.mjs  next.config.mjs  playwright.config.ts  tailwind.config.js  vitest.config.ts  vitest.extension.config.ts  vitest.extension.setup.ts  vitest.setup.ts
tldw_Server_API/: Embeddings-Migration-Plan.md  Embeddings-Project-Status.md  Evaluations-Improve-Tracker.md  README.md  __init__.py  requirements.txt  run_stt_tests.py  test_evaluation_basic.py
tldw_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+12311 files in other folders)
