###########################
# pyproject.toml for tldw_Server_API
###########################
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

###########################
# Project Info
###########################
[project]
name = "tldw-server"
version = "0.1.2"
description = "A comprehensive research assistant and media analysis platform - Too Long; Didn't Watch Server"
requires-python = ">=3.9"
readme = "README.md"
# Use SPDX license expression as a string to avoid deprecation warnings.
# Project is licensed under Apache 2.0.
license = "Apache-2.0"
keywords = ["transcription", "summarization", "media-processing", "llm", "rag", "fastapi", "research-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Framework :: FastAPI",
]
authors = [
  { name = "Robert Musser", email = "contact@tldwproject.com" }
]
dependencies = [
  # API Server Core
  "aiofiles>=23.0.0",
  "aiohttp",
  "aioresponses",
  "aiosqlite",
  "apscheduler>=3.10.0",
  "argon2-cffi>=23.0.0",
  "asyncpg",
  "bleach",
  "cachetools>=5.0.0",
  "click>=8.0.0",
  "click-completion>=0.5.2",
  "defusedxml>=0.7.0",
  "email-validator>=2.0.0",
  "fastapi>=0.100.0",
  "httpx>=0.24.0",
  "hypothesis",
  "loguru>=0.7.0",
  "lxml>=4.9.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "passlib>=1.7.0",
  "prometheus-client",
  "psutil>=5.9.0",
  "pydantic>=2.0.0",
  "pydantic-core>=2.0.0",
  "python-dotenv>=1.0.0",
  "python-jose",
  "python-magic>=0.4.0",
  "python-multipart>=0.0.6",
  "PyYAML>=6.0.0",
  "redis>=4.5.0",
  "rich>=13.0.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.0",
  "slowapi>=0.1.0",
  "starlette>=0.31.0",
  "tabulate>=0.9.0",
  "toml>=0.10.0",
  "tomli>=2.0.0",
  "tqdm>=4.65.0",
  "uvicorn[standard]>=0.23.0",

  
  # Security
  "keyring>=24.0.0",
  "puremagic>=1.15",
  "pycryptodomex>=3.18.0",
  "PyJWT>=2.8.0",
  "python-jose[cryptography]>=3.3.0",
  "yara-python>=4.3.0",
  
  # Audio/Video Processing
  "faster-whisper>=0.10.0",
  "PyAudio>=0.2.0",
  "sounddevice>=0.4.0",
  "soundfile>=0.12.0",
  "yt-dlp>=2023.12.0",
  
  # NLP/Text Processing
  "chardet>=5.0.0",
  "fugashi>=1.2.0",
  "jieba>=0.42.0",
  "langdetect>=1.0.0",
  "nltk>=3.8.0",
  "tiktoken>=0.5.0",
  
  # Document Processing
  "beautifulsoup4>=4.12.0",
  "docling>=1.0.0",
  "docx2txt>=0.8",
  "EbookLib>=0.18",
  "html2text>=2020.1.0",
  "lxml-html-clean>=0.1.0",
  "mwparserfromhell>=0.6.0",
  "mwxml>=0.3.0",
  "pymupdf>=1.23.0",
  "pymupdf4llm>=0.0.5",
  "pypandoc>=1.11",
  "pypandoc-binary>=1.11",
  "trafilatura>=1.6.0",
  
  # LLM/ML Integration 
  "flashrank>=0.2.0",
  "onnxruntime>=1.14.0",
  "openai>=1.0.0",
  "optimum>=1.13.0",
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "sentence-transformers>=2.2.0",
  
  # Research/Web
  "arxiv>=2.0.0",
  "playwright>=1.40.0",
  "playwright-stealth>=1.0.0",
  "requests>=2.31.0",
  "tenacity>=8.2.0",
  "urllib3>=2.0.0",
  
  # Vector Database
  "chromadb>=0.4.0",

  # Evals
  "matplotlib",

  # HTML sanitization
  "bleach>=6.1.0",

  # Template/UI Utilities
  "Jinja2>=3.1.0",
  "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://tldwproject.com"
Documentation = "https://docs.tldwproject.com"
Repository = "https://github.com/rmusser01/tldw_server"
"Bug Tracker" = "https://github.com/rmusser01/tldw_server/issues"
"Source Code" = "https://github.com/rmusser01/tldw_server"

[project.optional-dependencies]
# Development tools
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "pytest-timeout>=2.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "ruff>=0.1.0",
  "pre-commit>=3.3.0"
]

# Evaluation and metrics (optional)
evaluation = [
  "bert-score>=0.3.0",
  "rouge-score>=0.1.0",
  "sentence-transformers>=2.2.0",
  "textstat>=0.7.0"
]

# Data processing tools (optional)
data-tools = [
  "datasets>=2.14.0",
  "fire>=0.5.0",
  "genanki>=0.13.0",
  "joblib>=1.3.0",
  "python-json-logger>=2.0.0"
]

# OCR providers (optional)
ocr_dots = [
  # Dots OCR from source
  "dots-ocr @ git+https://github.com/rednote-hilab/dots.ocr.git"
]

ocr_points_transformers = [
  # Local inference requirements for POINTS-Reader via HF Transformers
  "transformers>=4.55.2",
  "torch>=2.5.1",
  # WePOINTS toolkit (installed from source)
  "wepoints @ git+https://github.com/WePOINTS/WePOINTS.git"
]

ocr_points_sglang = [
  # Client-side only; server runs separately
  "requests>=2.31.0"
]

# MediaWiki processing
media_wiki = [
  "mwparserfromhell>=0.6.0",
  "mwxml>=0.3.0"
]

# Web research features
web_research = [
  "arxiv>=2.0.0",
  "genanki>=0.13.0",
  "playwright>=1.40.0",
  "trafilatura>=1.6.0"
]

# Windows audio recording
audio_recording_windows = [
  "PyAudioWPatch>=0.2.12"
]

# Speaker Diarization (optional)
diarization = [
  "speechbrain>=0.5.15",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "scikit-learn>=1.3.0",
]

# Speech-to-Text with NVIDIA NeMo
STT_All = [
  "nemo-toolkit[asr]>=1.20.0",
  "cython>=0.29.0"
]

STT_Parakeet = [
  "nemo-toolkit[asr]>=1.20.0",
  "cython>=0.29.0",
]

STT_Parakeet_MLX = [
  "librosa",
  "parakeet-mlx",
]

# Text-to-Speech
TTS_All = [
  "pydub>=0.25.0"
]

TTS_kokoro = [
  "pydub>=0.25.0",
  "phonemizer>=3.2.0",
  "scipy>=1.10.0",
  "munch>=4.0.0"
]

TTS_kokoro_onnx = [
  "pydub>=0.25.0",
  "onnxruntime>=1.16.0",
  "kokoro-onnx>=0.1.0"
]

TTS_sovits = [
  "pydub>=0.25.0"
]

# Advanced TTS Providers
TTS_higgs = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "transformers>=4.30.0",
  "accelerate>=0.20.0",
  # Note: higgs-audio must be installed from source:
  # git clone https://github.com/boson-ai/higgs-audio.git && cd higgs-audio && pip install -e .
]

TTS_vibevoice = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "transformers>=4.30.0",
  "accelerate>=0.20.0",
  "librosa>=0.10.0",
  # Note: VibeVoice must be installed from source:
  # git clone https://github.com/microsoft/VibeVoice.git && cd VibeVoice && pip install -e .
]

TTS_chatterbox = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "chatterbox-tts>=0.1.0",  # If available via pip
  # Or install from source:
  # git clone https://github.com/resemble-ai/chatterbox.git && cd chatterbox && pip install -e .
]

# Backend options
backend_onnx = [
  "onnxruntime>=1.16.0"
]

backend_llama = [
  "llama-cpp-python>=0.2.0"
]

backend_vllm = [
  "vllm>=0.2.0"
]

# Database backends
db_postgres = [
  "psycopg2-binary>=2.9.0",
  "psycopg2>=2.9.0"
]

db_opensearch = [
  "opensearch-py>=2.3.0",
  "elasticsearch>=8.0.0"
]

# All optional dependencies
all = [
  "tldw-server[dev,evaluation,data-tools,gradio,media_wiki,web_research,STT_All,TTS_All,TTS_higgs,TTS_vibevoice,TTS_chatterbox,backend_onnx,db_postgres,ocr_dots,ocr_points_transformers,ocr_points_sglang]"
]

###########################
# Entry Points
###########################
[project.scripts]
tldw-server = "tldw_Server_API.app.main:run_server"
# Point tldw-evals to the richer, unified CLI
tldw-evals = "tldw_Server_API.cli.evals_cli:main"

###########################
# Tools - Package Discovery
###########################
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tldw_Server_API", "tldw_Server_API.*"]
exclude = [
  "tests*",
  "docs*",
  "Helper_Scripts*",
  "*.tests",
  "*.tests.*",
  "tests.*",
]

[tool.setuptools.package-data]
tldw_Server_API = [
  "Config_Files/*.txt",
  "Config_Files/*.yaml",
  "Helper_Scripts/**/*",
  "static/**/*",
  "WebUI/**/*",
  "app/static/**/*",
  "**/*.yaml",
  "**/*.json",
  "**/*.html",
  "**/*.css",
  "**/*.js",
]

###########################
# Tools - Tests
###########################
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources:",
    "ignore::DeprecationWarning:speechbrain.pretrained:",
    "ignore::DeprecationWarning:transformers:",
    "ignore::DeprecationWarning:torch:"
]
markers = [
    "asyncio: mark test as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks end-to-end UI tests",
    "external_api: marks tests that require external API access",
    "local_llm_service: marks tests that require local LLM service",
    "timeout: marks tests with custom timeout settings", 
    "bench: marks benchmark tests",
    "benchmark: marks performance benchmark tests",
    "performance: marks performance tests",
    "slow: marks tests that take a long time to run",
    "load: marks load testing tests",
    "property: marks property-based testing tests",
    "requires_rag: marks tests that require RAG functionality"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tldw_Server_API/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [
    "tldw_Server_API/tests/Character_Chat_NEW",
    "tldw_Server_API/tests/TTS_NEW",
    "tldw_Server_API/tests/Embeddings"
]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
    "--disable-warnings",
    "-p pytest_asyncio"
]
import_mode = "importlib"

###########################
# Tools - Code Quality
###########################
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["tldw_Server_API"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "N802", # function name should be lowercase
    "N806", # variable in function should be lowercase
]
exclude = [
    "migrations",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "tests",
]

[tool.ruff.lint.isort]
known-first-party = ["tldw_Server_API"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
show_error_codes = true
strict_equality = true
files = ["tldw_Server_API"]
exclude = [
    "tests",
    "migrations",
    "build",
    "dist",
]
